// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqBkg ezdwsr"
>
  <li
    className="sc-fznWOq iZKcNI"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznWOq iZKcNI"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznWOq iZKcNI"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzqBkg ezdwsr"
>
  <li
    className="sc-fznWOq sc-fzolEj dftqKA"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fznWOq sc-fzolEj dftqKA"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fznWOq sc-fzolEj dftqKA"
  >
    <span
      className="sc-fznJRM giKlTX"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
